<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/discussion"
        android:paddingLeft="16dp">
        
        <TextView
            android:id="@+id/story_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/colorDarkText"
            android:text="@string/story_title"
            />

        <TextView
            android:id="@+id/story_pretty_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/story_title"
            android:ellipsize="middle"
            android:gravity="left"
            android:paddingBottom="2dp"
            android:maxLines="1"
            android:textColor="@color/colorDarkText"
            android:text="@string/story_pretty_url"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@id/discussion"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/title_layout"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/title_layout"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            app:srcCompat="@drawable/ic_comment_vector"/>

        <TextView
            android:id="@+id/story_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorDarkText"
            android:text="@string/comment_count"/>

    </LinearLayout>



    <TextView
        android:id="@+id/story_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        android:text="@string/story_summary"
        />

    <ImageView
        android:id="@+id/hot_story"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/story_summary"
        android:layout_marginLeft="14dp"
        android:contentDescription="@string/fire_content_description"
        android:src="@drawable/ic_fire_grey"
        />

    <TextView
        android:id="@+id/story_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/story_summary"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="1dp"
        android:text="@string/story_point"
        android:textColor="@color/colorDarkText"/>


    <TextView
        android:id="@+id/story_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/story_summary"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/story_point"
        android:layout_marginTop="1dp"
        android:textColor="@color/colorDarkText"
        android:text="@string/story_time"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/story_summary"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorSeparator"/>



</RelativeLayout>